<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/task_text"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="28sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/editTextBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:hint="@string/model"/>
    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/number"
        />
    <EditText
        android:id="@+id/editTextYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:padding="10dp"
        android:hint="@string/year"/>
    <Button
        android:id="@+id/buttonSave"
        android:backgroundTint="@color/blue_100"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="24sp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"/>

</LinearLayout>